--- a/index.html
+++ b/index.html
@@ -196,11 +196,11 @@ p   {
 <div class=report>PERCENTAGE is <font color=black>2.1900</font></div> 
 <div class=report>EQUITY is <font color=black>1096.01</font></div>
 <div class=report>YOUR CASH is <font color=black>0.28</font></div>
-<div class=report>COST is - $ <font color=black></font></div>
+<div class=report>COST is - $ <font color=black>1441.15 </font></div>
 <div class=report>PROFIT is - $ <div2 class="positive negative">-345.42</div2></div>
-<div class=report>MANUALLY SELL ALL IF PROFIT IS GREATER THAN 12% - $ <font color=black>0.0000</font></div>
+<div class=report>MANUALLY SELL ALL IF PROFIT IS GREATER THAN 12% - $ <font color=black>172.9380</font></div>
 <div class=report>QTY OF COINS TO SELL  - <font color=#6495ED>10238</font></div> 
-<div class=report>PRICE AVG -  <font color=black>0.0000</font></div> 
+<div class=report>PRICE AVG -  <font color=black>0.1408</font></div> 
 
     <script language="JavaScript" type="text/javascript">
   <!--
